--- a/README.yml
+++ b/README.yml
@@ -8,7 +8,7 @@ owner:
 section:
   - title: AWS DocumentDB
     keyword: Introduction on Amazon Document DB, Create a Document DB cluster.
-    url:
+    url: https://github.com/cloudmesh-community/book/pull/361
     github:
     issue : https://github.com/cloudmesh-community/book/issues/233
 chapter:
