--- a/README.yml
+++ b/README.yml
@@ -17,6 +17,8 @@ chapter:
     url: https://github.com/cloudmesh-community/book/blob/master/chapters/prg/python/scikit-learn/scikit-learn-k-means.md
     github: 
     issue: https://github.com/cloudmesh-community/book/issues/242
+comprehension :    
+    VM connection using config file : sp19-516-134/Comprehension/awsvmconnection_libcloud.py      
 project : 
     title : AWS S3 file management using libcloud
     docopt : https://github.com/cloudmesh-community/sp19-516-134/blob/master/docoptfile
