--- a/README.yml
+++ b/README.yml
@@ -18,7 +18,7 @@ chapter:
     github: 
     issue: https://github.com/cloudmesh-community/book/issues/242
 comprehension :    
-    VM connection using config file : sp19-516-134/Comprehension/awsvmconnection_libcloud.py      
+    VM connection using config file : https://github.com/cloudmesh-community/sp19-516-134/tree/master/Comprehension    
 project : 
     title : AWS S3 file management using libcloud
     docopt : https://github.com/cloudmesh-community/sp19-516-134/blob/master/project-code/Docopt_storage_libcloud.py
