--- a/README.yml
+++ b/README.yml
@@ -12,7 +12,7 @@ section:
     github:
     issue : https://github.com/cloudmesh-community/book/issues/233
   - title: Nosetest
-    url: https://github.com/cloudmesh-community/sp19-516-134/tree/master/nosetest
+    url: https://github.com/cloudmesh-community/sp19-516-134/blob/master/nosetest/nosetest.md
 chapter:
   - title: Scikit-Learn
     keyword: Introduction,Supervised learning,Unsupervised Learning,Linear Models,Support Vector Machines,Stochastic Gradient Descent,Nearest Neighbors,Feature Selection
