--- a/README.yml
+++ b/README.yml
@@ -8,8 +8,7 @@ owner:
 section:
   - title: AWS DocumentDB
     keyword: Introduction on Amazon Document DB, Create a Document DB cluster.
-    url: https://github.com/cloudmesh-community/book/pull/361
-    github:
+    url: https://github.com/cloudmesh-community/book/blob/master/chapters/in/aws-documentdb.md
     issue : https://github.com/cloudmesh-community/book/issues/233
   - title: Nosetest
     url: https://github.com/cloudmesh-community/sp19-516-134/blob/master/nosetest/nosetest.md
