--- a/README.yml
+++ b/README.yml
@@ -21,9 +21,9 @@ chapter:
 comprehension :    
     VM connection using config file : https://github.com/cloudmesh-community/sp19-516-134/tree/master/Comprehension    
 project : 
-    title : AWS S3 file management using libcloud
-    docopt : https://github.com/cloudmesh-community/sp19-516-134/blob/master/project-code/Docopt_storage_libcloud.py
-    project_code : https://github.com/cloudmesh-community/sp19-516-134/blob/master/project-code/
+    - title : AWS S3 file management using libcloud
+      docopt : https://github.com/cloudmesh-community/sp19-516-134/blob/master/project-code/Docopt_storage_libcloud.py
+      code : https://github.com/cloudmesh-community/sp19-516-134/blob/master/project-code/
     
     
     
