--- a/README.yml
+++ b/README.yml
@@ -21,7 +21,7 @@ chapter:
 comprehension :    
     VM connection using config file : https://github.com/cloudmesh-community/sp19-516-134/tree/master/Comprehension    
 project : 
-    - title : AWS S3 file management using libcloud
+    - title : AWS S3 file management using boto
       docopt : https://github.com/cloudmesh-community/sp19-516-134/blob/master/project-code/Docopt_storage_libcloud.py
       code : https://github.com/cloudmesh-community/sp19-516-134/blob/master/project-code/
              https://github.com/cloudmesh/cloudmesh-storage/tree/master/cloudmesh/storage/provider/awss3
