add the pytest placeholder

--- a/README.yml
+++ b/README.yml
@@ -21,6 +21,8 @@ comprehension :
 project : 
     - title : AWS S3 file management using boto
       code : https://github.com/cloudmesh/cloudmesh-storagecloudmesh/storage/provider/awss3
+      pytest:
+        - TBD
 
     
     
