--- a/README.yml
+++ b/README.yml
@@ -28,6 +28,7 @@ project :
       pytest:
         - https://github.com/cloudmesh/cloudmesh-storage/tree/master/tests/test_storage_awss3.py
         - https://github.com/cloudmesh/cloudmesh-storage/blob/master/cloudmesh/storage/spec/tests/test_openapi_storage.py
+      - status: 100%
 
     
     
